[build-system]
requires = ["setuptools>=61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "smu4000"
version = "0.0.0"  # Placeholder (setuptools_scm will override this)
description = "Control library for the Ark Metrica SMU-4000"
authors = [{ name = "Ark Metrica Ltd.", email = "info@arkmetrica.com" }]
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["smu4000"]

[tool.setuptools_scm]
# install latest tagged version
version_scheme = "post-release"
local_scheme = "no-local-version"